--- a/style.css
+++ b/style.css
@@ -1,33 +1,44 @@
 * {
-  margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: 'League Spartan', sans-serif;
 }
 
 body {
-  max-width: 100vw;
-  max-height: 100vh;
+  margin: 10px;
+  box-sizing: border-box;
+  font-family: 'League Spartan', sans-serif;
+  /* max-width: 100vw;
+  max-height: 100vh; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-image: url(/assets/bg-pattern-top-desktop.svg), url(/assets/bg-pattern-bottom-desktop.svg);
+  background-repeat: no-repeat;
+  background-position-y: top, bottom;
+  background-position-x: left, right;
 }
 
 main {
-  max-width: 100vw;
-  margin: 100px 200px;
+  max-width: 1500px;
+  /* max-height: 100vh; */
+  padding: 40px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
 .container {
-  min-width: 100%;
-  max-height: 100%;
-  display: flex;
-  justify-content: space-between;
+  /* max-height: 50vh; */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 3.125rem;
+  /* flex-wrap: wrap; */
+  margin-bottom: 3.125rem;
+  /* justify-content: center; */
 }
 
 .container header {
-  max-width: 450px;
+  max-width: 28.125rem;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -47,50 +58,68 @@ header p {
   line-height: 1.5rem;
 }
 
-.rated-container {
-  max-width: 50vw;
+.ratings {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  /* max-height: 50vh; */
 }
 
-.rated {
-  width: 450px;
+.rating {
+  width: 300px;
   display: flex;
-  gap: 20px;
+  justify-content: space-around;
+  padding: 20px;
   align-items: center;
-  margin-bottom: 15px;
+  margin: 10px;
   padding: 18px 45px 18px 25px;
   background: hsl(300, 24%, 96%);
   border: none;
-  border-radius: 8px;
+  border-radius: .5rem;
 }
 
-.rated p {
+.rating-1 {
+  margin-right: 80px;
+}
+
+.rating-2 {
+  margin-right: 40px;
+}
+
+.rating p {
   font-size: 1.075rem;
   font-weight: 700;
   color: hsl(300, 43%, 22%);
 }
 
-.container-image img {
+.stars img {
   margin-right: 8px;
 }
 
 .cards {
   display: flex;
-  margin-top: 60px;
-  gap: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* max-height: 50vh; */
 }
 
 .card {
-  width: 350px;
+  max-width: 350px;
+  max-height: 250px;
   border: 1px solid #bbb;
   padding: 40px 30px;
   background: hsl(300, 43%, 22%);
-  border-radius: 8px;
+  border-radius: .5rem;
+
+  margin-right: 35px;
+  display: grid;
+  grid-template-columns: 100px 1fr;
 }
 
 .card cite {
   display: flex;
+  min-width: fit-content;
 }
 
 .card cite img {
@@ -102,6 +131,7 @@ header p {
 }
 
 .card cite p {
+  min-width: fit-content;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -116,12 +146,31 @@ header p {
 }
 
 .card blockquote {
-  color: hsl(0, 0%, 100%);
+  grid-column: span 2;
+  color: hsl(300, 24%, 96%);
   font-size: 1.025rem;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 21px;
   margin-top: 30px;
   text-align: left;
 }
 
+.card-2 {
+  position: relative;
+  top: 20px;
+}
 
+.card-3 {
+  position: relative;
+  top: 40px;
+  margin-right: 0;
+}
+
+@media only screen and (max-width: 1520px) {
+  .card-2 {
+    top: 0px;
+  }
+}
+
+@media only screen and (max-width: 1350px) {
+}
