--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
-* {
-  padding: 0;
-}
-
 body {
-  margin: 10px;
+  min-width: 100vw;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
   font-family: 'League Spartan', sans-serif;
-  /* max-width: 100vw;
-  max-height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,159 +15,143 @@ body {
   background-position-x: left, right;
 }
 
-main {
-  max-width: 1500px;
-  /* max-height: 100vh; */
-  padding: 40px;
+.wrapper {
+  max-width: 1800px;
+  margin: 100px 175px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.container {
-  /* max-height: 50vh; */
+.top-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 3.125rem;
-  /* flex-wrap: wrap; */
-  margin-bottom: 3.125rem;
-  /* justify-content: center; */
+  grid-template-columns: repeat(auto-fit, minmax(410px, 1fr));
+  grid-gap: 50px;
+  margin-bottom: 50px;
 }
 
-.container header {
-  max-width: 28.125rem;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  justify-content: left;
-}
-
-header h1 {
+.main-text h1 {
+  margin: 0;
+  max-width: 400px;
   color: hsl(300, 43%, 22%);
   font-weight: 700;
-  font-size: 3.2rem;
+  font-size: 3.5rem;
 }
 
-header p {
+.main-text p {
+  max-width: 450px;
   color: hsl(303, 10%, 53%);
   font-weight: 500;
   font-size: 1.125rem;
   line-height: 1.5rem;
+  margin-top: 30px;
+  margin-bottom: 0;
 }
 
 .ratings {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: flex-end;
-  /* max-height: 50vh; */
 }
 
 .rating {
-  width: 300px;
+  width: 350px;
   display: flex;
-  justify-content: space-around;
-  padding: 20px;
   align-items: center;
-  margin: 10px;
-  padding: 18px 45px 18px 25px;
+  justify-content: left;
+  gap: 20px;
+  margin-bottom: 20px;
+  padding: 5px 45px 5px 25px;
   background: hsl(300, 24%, 96%);
   border: none;
   border-radius: .5rem;
 }
 
 .rating-1 {
-  margin-right: 80px;
+  margin-right: 100px;
 }
 
 .rating-2 {
-  margin-right: 40px;
+  margin-right: 50px;
 }
 
 .rating p {
-  font-size: 1.075rem;
+  font-size: 1.025rem;
   font-weight: 700;
   color: hsl(300, 43%, 22%);
 }
 
 .stars img {
-  margin-right: 8px;
+  margin-right: 5px;
 }
 
-.cards {
+.bottom-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* max-height: 50vh; */
+  gap: 30px;
 }
 
-.card {
-  max-width: 350px;
-  max-height: 250px;
-  border: 1px solid #bbb;
+.buyer {
+  max-width: 280px;
   padding: 40px 30px;
   background: hsl(300, 43%, 22%);
   border-radius: .5rem;
 
-  margin-right: 35px;
-  display: grid;
-  grid-template-columns: 100px 1fr;
-}
-
-.card cite {
   display: flex;
-  min-width: fit-content;
+  flex-direction: column;
 }
 
-.card cite img {
+.buyer-user {
+  display: flex;
+  align-items: center;
+}
+
+.buyer img {
   width: 2.5rem;
   height: 2.5rem;
   object-fit: cover;
   clip-path: circle();
-  margin-right: 1rem;
+  margin-right: 1.5rem;
 }
 
-.card cite p {
-  min-width: fit-content;
+.buyer h5 {
+  font-size: 1rem;
+  line-height: 1.25rem;
+  color: hsl(300, 24%, 96%);
   display: flex;
   flex-direction: column;
-  gap: 5px;
-  font-size: 1rem;
-  font-weight: 700;
-  color: hsl(0, 0%, 100%); 
+  margin: 0;
 }
 
-.card cite p span {
+.buyer h5 span {
   font-weight: 400;
   color: hsl(333, 80%, 67%);
 }
 
-.card blockquote {
-  grid-column: span 2;
+.buyer-feedback {
   color: hsl(300, 24%, 96%);
-  font-size: 1.025rem;
-  font-weight: 500;
-  line-height: 21px;
-  margin-top: 30px;
-  text-align: left;
+  grid-column: span 2;
+  margin-top: 20px;
+  line-height: 1.25rem;
 }
 
-.card-2 {
+.buyer-2 {
   position: relative;
   top: 20px;
 }
 
-.card-3 {
+.buyer-3 {
   position: relative;
   top: 40px;
-  margin-right: 0;
 }
 
-@media only screen and (max-width: 1520px) {
-  .card-2 {
-    top: 0px;
+  /* @media only screen and (max-width: 1520px) {
+    .card-2 {
+      top: 0px;
+    }
   }
-}
 
-@media only screen and (max-width: 1350px) {
-}
+  @media only screen and (max-width: 1350px) {
+  } */
