--- a/style.css
+++ b/style.css
@@ -201,3 +201,9 @@ body {
       top: 0;
     }
   }
+
+  @media only screen and (max-width: 400px) {
+    .wrapper {
+      padding: 0;
+    }
+  }
